# codegen/src/main/resources/openapi-students.yaml
@@ -40,13 +40,11 @@ paths:
                 $ref: '#/components/schemas/StudentDto'
       responses:
         '200':
-          description: Успешный ответ с созданным студентом
+          description: Успешный ответ создания студента
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/StudentDto'
+                $ref: '#/components/schemas/CreateStudentResponse'
         '400':
           description: Неверное значение статуса
         'default':
@@ -122,8 +120,9 @@ components:
         - age
       properties:
         id:
-          type: integer
-          format: int64
+#          todo все айдишники должны быть UUID
+          type: string
+          format: uuid
           example: 01d3ff0d-cc37-4863-adef-72d3b0dbf08a
         login:
           type: string
@@ -141,31 +140,20 @@ components:
           type: integer
           format: int32
           example: 23
-      xml:
-        name: student
-    SubjectDto:
-      type: object
-      required:
-        - name
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 4ad76228-517f-4496-aa6c-eef36d3de35a
-        name:
-          type: string
-          example: Higher mathematics
-      xml:
-        name: subject
-    StudentsDto:
-      type: array
-      items:
-        $ref: '#/components/schemas/StudentDto'
+        subjects:
+          type: array
+          items:
+            type: string
     Error:
       type: object
       properties:
         code:
           type: integer
+        message:
+          type: string
+    CreateStudentResponse:
+      type: object
+      properties:
         message:
           type: string
 
