# server/src/main/java/org/elvira/studentdeanury/server/dto/CreateStudentRequest.java
@@ -1,25 +1,0 @@
-package org.elvira.studentdeanury.server.dto;
-
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-import lombok.experimental.Accessors;
-
-import java.util.Set;
-
-@Getter
-@Setter
-@AllArgsConstructor
-@NoArgsConstructor
-@Accessors(chain = true)
-public class CreateStudentRequest {
-    private Long id;
-    private String login;
-    private String firstName;
-    private String middleName;
-    private String lastName;
-    private Integer age;
-    private Set<CreateSubjectRequest> subjects;
-
-}
